# internal/api/api.go
@@ -5,8 +5,11 @@ import (
 	"net/http"
 
 	"github.com/gin-gonic/gin"
+	"github.com/redis/go-redis/v9"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
+	"github.com/viettrung2103/bookmark-management-lesson/internal/repository"
+	"github.com/viettrung2103/bookmark-management-lesson/pkg/utils"
 
 	_ "github.com/viettrung2103/bookmark-management-lesson/docs"
 	"github.com/viettrung2103/bookmark-management-lesson/internal/handler"
@@ -20,15 +23,17 @@ type Engine interface {
 }
 
 type engine struct {
-	app *gin.Engine
-	cfg *Config
+	app   *gin.Engine
+	cfg   *Config
+	redis *redis.Client
 }
 
 // NewEngine creates a new engine
-func NewEngine(cfg *Config) Engine {
+func NewEngine(cfg *Config, redis *redis.Client) Engine {
 	app := &engine{
-		app: gin.Default(),
-		cfg: cfg,
+		app:   gin.Default(),
+		cfg:   cfg,
+		redis: redis,
 	}
 	app.initRoutes()
 
@@ -51,6 +56,13 @@ func (e *engine) initRoutes() {
 	genPassSvc := service.NewGenPass()
 	genPassHandler := handler.NewGenPass(genPassSvc)
 
+	keyGen := utils.NewKeyGenerator()
+	shortenUrlRepo := repository.NewUrlStorage(e.redis)
+	shortenUrlSvc := service.NewShortenUrl(shortenUrlRepo, keyGen)
+	shortenUrlHandler := handler.NewShortenUrlHandler(shortenUrlSvc)
+
 	e.app.GET("/genpass", genPassHandler.GeneratePassword)
 	e.app.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+	e.app.POST("/v1/links/shorten", shortenUrlHandler.ShortenUrl)
+	e.app.GET("/v1/links/shorten/:code", shortenUrlHandler.Redirect)
 }
